# gperf_gcc_tracing

./: CMakeLists.txt  README.md  build-test.sh  gcc_trace_descript.md  gcc_trace_description.md  setup-dev-env.sh
include/: comm.h  perf_output.h  plugin.h  tracking.h
src/: perf_output.cpp  plugin.cpp  tracking.cpp
test/: CMakeLists.txt  test.cpp
